Update Severity at git Actions

--- a/.github/workflows/Scanning-Helm-Charts.yml
+++ b/.github/workflows/Scanning-Helm-Charts.yml
@@ -32,6 +32,7 @@ jobs:
           scan-ref: 'charts/*'
           output: 'trivy-results.sarif'
           exit-code: '1'
+          severity: 'CRITICAL,HIGH'
           ignore-unfixed: true
 
       - name: Upload Trivy scan results to GitHub Security tab
