remove nonroot privilages

--- a/charts/jenkins-test/values.yaml
+++ b/charts/jenkins-test/values.yaml
@@ -27,7 +27,7 @@ podAnnotations: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
-  runAsNonRoot: true
+  #runAsNonRoot: true
 
 securityContext: {}
   # capabilities:
