--- a/charts/sample-helm-devsecops/values.yaml
+++ b/charts/sample-helm-devsecops/values.yaml
@@ -33,7 +33,7 @@ securityContext: {}
   #   drop:
   #   - ALL
   # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
+  runAsNonRoot: true
   # runAsUser: 1000
 
 service:
